# gym-jsbsim

./: README.md  pyproject.toml  setup.py
gym_jsbsim/: __init__.py  aircraft.py  assessors.py  basic_ic.xml  environment.py  flightgear.xml  minimal_ic.xml  properties.py  rewards.py  simulation.py  tasks.py  utils.py  visualiser.py
gym_jsbsim/agents/: agents.py
gym_jsbsim/tests/: manual_tests.py  stubs.py  test_assessors.py  test_environment.py  test_functional.py  test_geodetic_position.py  test_rewards.py  test_simulation.py  test_tasks.py  test_visualiser.py
